--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name = "viewport" content="width-device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="calcstyle.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -32,6 +32,6 @@
     </div>
 
 
-  <script src="calcindex.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
